--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@300&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/d2568b55b4.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
